Remove usages of Commons Lang 2 (#194)
Co-authored-by: Tim Jacomb <timjacomb1@gmail.com>